# kagayaki

./: .gitignore  LICENSE  README.md
base/: glyphcount.pl
base/cairo-kagayaki/: PKGBUILD
base/fontconfig-kagayaki/: 0001-configure.patch  0002-configure.ac.patch  0005-Makefile.am.in.patch  0006-fix-test-with-freetype2-2.7.1.patch  PKGBUILD  fc-cache-kagayaki.hook  kagayaki-conf.tar.xz  local.conf
base/freetype2-kagayaki/: PKGBUILD  xft-settings.sh
base/kagayaki-fonts-base/: PKGBUILD  local.conf
base/kagayaki-fonts-extended/: PKGBUILD
base/kagayaki-fonts-world/: PKGBUILD
base/lib32-fontconfig-kagayaki/: PKGBUILD
base/lib32-freetype2-kagayaki/: 0002-Enable-subpixel-rendering.patch  0003-Enable-infinality-subpixel-hinting.patch  PKGBUILD
cairo-kagayaki/: PKGBUILD
docs/: _config.yml  index-cjk.html  index-fr.html  index-hentaigana.html  index.html  test.css  test.md  world.md
fontconfig-kagayaki/: PKGBUILD  fontconfig-kagayaki.install  kagayaki-conf.tar.xz
fonts/base/caladea-kagayaki/: 41-caladea.conf  PKGBUILD
fonts/base/carlito-kagayaki/: 41-carlito.conf  PKGBUILD
fonts/base/courier-prime-kagayaki/: 41-courier-prime.conf  PKGBUILD
fonts/base/dejavu-kagayaki/: 41-dejavu.conf  PKGBUILD
fonts/base/erewhon-kagayaki/: 41-erewhon.conf  PKGBUILD
fonts/base/fira-code-kagayaki/: 41-fira-code.conf
fonts/base/ibm-plex-kagayaki/: 41-ibm-plex.conf  PKGBUILD
fonts/base/noto-emoji-kagayaki/: 41-noto-emoji.conf  PKGBUILD
fonts/base/noto-fonts-kagayaki/: 41-noto-arabic.conf  41-noto-cros.conf  41-noto-extras-unhinted.conf  41-noto-extras.conf  41-noto-mono.conf  41-noto-sans.conf  41-noto-serif.conf  PKGBUILD
fonts/base/otf-erewhon-kagayaki/: 90-non-tt-erewhon.conf  (+2 more)
fonts/kagayaki-fonts-base/: PKGBUILD
fonts/kagayaki-fonts-extended/: PKGBUILD
fonts/kagayaki-fonts-world/: PKGBUILD
freetype2-kagayaki/: PKGBUILD  freetype2-kagayaki.install  xft-settings.sh
kagayaki-conf/conf.d.infinality/: 10-base-rendering.conf  10-scale-bitmap-fonts.conf  30-metric-aliases.conf  32-cjk-aliases.conf  35-repl-custom.conf  36-repl-missing-glyphs.conf  37-cjk-aliases.conf  37-main-aliases.conf  37-repl-cjk.conf  37-repl-global.conf  37-repl-main.conf  38-repl-webfonts-custom.conf  40-non-latin-microsoft.conf  40-non-latin-misc.conf  60-kagayaki.conf  60-latin.conf  65-non-latin.conf  93-final-rendering.conf  95-reject.conf  Makefile.am  README  README.in
kagayaki-conf/conf.d.kagayaki/: 10-base-rendering.conf  20-unhint-small-dejavu.conf  30-cjk-aliases.conf  33-repl-webfonts.conf  41-nonlatin.conf  42-latin.conf  45-latin-microsoft.conf  45-latin-misc.conf  51-local.conf  Makefile.am  README  README.in
kagayaki-fonts-base/: PKGBUILD
kagayaki-fonts-extended/: PKGBUILD
lib32-freetype2-kagayaki/: PKGBUILD
(+163 files in other folders)
